--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   },
   "scripts": {
     "postinstall": "curl -s https://raw.githubusercontent.com/reactorcore/pomander/master/bin/install | bash",
-    "start": "node ./server/app.js",
+    "start": "nodemon ./server/app.js",
     "start:es6": "babel-node ./server/app.js",
     "test": "mocha server/spec/server-spec.js; RES=$?; kill %1; exit $RES",
     "test:es6": "mocha --compilers js:babel-register server/spec/server-spec.js; RES=$?; kill %1; exit $RES",
@@ -21,6 +21,7 @@
     "express": "^4.16.4",
     "morgan": "^1.4.1",
     "mysql": "^2.16.0",
+    "nodemon": "^1.18.7",
     "request": "^2.88.0",
     "sequelize": "^3.21.0"
   },
@@ -30,7 +31,8 @@
     "babel-register": "^6.7.2",
     "chai": "^3.5.0",
     "eslint-config-hackreactor": "git://github.com/reactorcore/eslint-config-hackreactor",
-    "mocha": "^2.4.5"
+    "mocha": "^2.4.5",
+    "nodemon": "^1.18.7"
   },
   "babel": {
     "presets": [
